--- a/src/Board/board.css
+++ b/src/Board/board.css
@@ -12,10 +12,11 @@
   height: 16px;
   width: 16px;
   margin: 2.5px;
-  border-radius: 3px;
-  -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
+  /*  border-radius: 3px; */
+  border-radius: 50%;
+  /* -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
-  box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.74);
+  box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.74); */
 }
 
 .square:active {
