--- a/src/Board/board.css
+++ b/src/Board/board.css
@@ -23,6 +23,12 @@
   transform: translateY(1px);
 }
 
+.cellShadow {
+  -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
+  -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
+  box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.74);
+}
+
 .circle {
   height: 24px;
   width: 24px;
