ready for the day

--- a/src/colors.css
+++ b/src/colors.css
@@ -71,3 +71,10 @@
 .life4 {
   background-color: #ff5d6c;
 }
+
+.backVirus {
+  /*   background-image: url("./assets/icons/virus.svg");
+  background-size: 90%;
+  background-repeat: no-repeat;
+  background-position: center; */
+}
