--- a/src/Sider/sider.css
+++ b/src/Sider/sider.css
@@ -1,22 +1,22 @@
 #siderContainer {
   background-color: white;
-  width: 115px;
+  width: 90%;
   padding: 10px 15px;
   border-radius: 0 5px 5px 0;
   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.74);
   position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%, 0);
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
   font-size: 16px;
 }
 
 .parameter {
-  margin-top: 10px;
+  flex: 1;
+  margin: 0 5px 0 5px;
   padding: 5px;
   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
