--- a/src/Sider/sider.css
+++ b/src/Sider/sider.css
@@ -15,13 +15,16 @@
 }
 
 .parameter {
-  flex: 1;
   margin: 0 5px 0 5px;
   padding: 5px;
   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.74);
   cursor: pointer;
+}
+
+#siderContainer .parameter {
+  flex: 1;
 }
 
 .parameter input {
