--- a/src/Board/board.css
+++ b/src/Board/board.css
@@ -1,9 +1,8 @@
 #board {
-  padding: 15px;
   border-radius: 5px;
-  -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
+  /*   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
-  box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.74);
+  box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.74); */
   position: relative;
 }
 
@@ -63,7 +62,7 @@
 
 #optionsBar {
   width: 200px;
-  height: 200px;
+  min-height: 250px;
   position: absolute;
   top: 50%;
   left: 0px;
@@ -84,9 +83,9 @@
   box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.74);
   font-size: 20px;
   padding: 5px;
-  margin-bottom: 10px;
   width: 90%;
   margin: auto;
+  margin-bottom: 5px;
 }
 
 .optionButton:active {
@@ -97,6 +96,20 @@
   width: 30px;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.midiOptions {
+  width: 90%;
+  -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
+  -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
+  box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.74);
+  height: 160px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: 20px;
+  padding: 5px;
+  margin: auto;
 }
 
 @keyframes onActive {
