--- a/src/Synth/synth.css
+++ b/src/Synth/synth.css
@@ -1,5 +1,6 @@
 #SynthBar {
   background-color: white;
+  height: 400px;
   width: 115px;
   padding: 10px 15px;
   border-radius: 5px 0 0 5px;
@@ -14,4 +15,8 @@
   flex-direction: column;
   justify-content: space-around;
   font-size: 16px;
+}
+
+#SynthBar .parameter {
+  margin: 5px 0 5px 0;
 }
