--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,10 @@ h3 {
   font-weight: 600;
   margin-bottom: 5px;
 }
+
+header {
+  position: absolute;
+  left: 50%;
+  top: 100px;
+  transform: translate(-50%, 0);
+}
