--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,50 @@ header {
   top: 100px;
   transform: translate(-50%, 0);
 }
+
+#switchContainer {
+  height: 20px;
+  width: 35px;
+  border-radius: 25px;
+  position: relative;
+}
+
+#switch {
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background-color: white;
+  cursor: pointer;
+  position: absolute;
+  left: 2px;
+  animation-name: rightToLeft;
+}
+
+#switchBis {
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background-color: white;
+  cursor: pointer;
+  position: absolute;
+  right: 2px;
+  animation-name: leftToRight;
+}
+
+@keyframes leftToRight {
+  0% {
+    left: 3.5px;
+  }
+  100% {
+    right: 3.5px;
+  }
+}
+
+@keyframes rightToLeft {
+  0% {
+    right: 3.5px;
+  }
+  100% {
+    left: 3.5px;
+  }
+}
