--- a/src/Components/Synth/synth.css
+++ b/src/Components/Synth/synth.css
@@ -1,7 +1,7 @@
 #SynthBar {
   background-color: white;
-  height: 500px;
-  width: 80px;
+  height: 450px;
+  width: 100px;
   padding: 10px 15px;
   border-radius: 5px 0 0 5px;
   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
@@ -23,7 +23,7 @@
 }
 
 .faderContainer {
-  height: 300px;
+  height: 200px;
   width: 8px;
   border: solid 1px #b4b4b4;
   border-radius: 5px;
@@ -43,4 +43,17 @@
   left: 50%;
   transform: translate(-50%, -50%);
   cursor: pointer;
+}
+
+#generalParamsBloc {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100px;
+  justify-content: space-around;
+  align-content: space-between;
+}
+
+.switchContainer {
+  width: 45%;
 }
