--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,90 @@
 .App {
   position: relative;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+}
+
+#homeScreen {
+  height: 100vh;
+  width: 100%;
+  background-color: #aacfcf;
+  color: white;
+  font-size: 80px;
+}
+
+#screen2 {
+  height: 100vh;
+  width: 100%;
+  background-color: #fde2e2;
+  font-size: 24px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  color: #aacfcf;
+}
+
+#screen2 div {
+  line-height: 45px;
+}
+
+#screen2 a {
+  border: solid 2px white;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 10px 30px;
+  border-radius: 25px;
+  font-size: 20px;
+  cursor: pointer;
+  color: #aacfcf;
+  background-color: white;
+  text-decoration: inherit;
+  font-family: "Avenir";
+}
+
+#underConstruct {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: tomato;
+}
+
+.para1 {
+  position: relative;
+  left: 100px;
+}
+
+.para2 {
+  display: flex;
+  flex-direction: column;
+  text-align: end;
+  position: relative;
+  right: 100px;
+}
+
+#particlesFrame {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+#screen3 {
+  height: 100vh;
+  width: 100%;
+  background-color: #aacfcf;
+  font-size: 24px;
+  position: relative;
+  color: #fde2e2;
+}
+
+#screen3 h2 {
+  font-size: 40px;
+  font-weight: lighter;
+  position: relative;
+  top: 100px;
+  left: 150px;
 }
 
 h3 {
@@ -8,10 +93,10 @@ h3 {
 }
 
 header {
-  position: absolute;
-  left: 50%;
+  position: sticky;
   top: 100px;
-  transform: translate(-50%, 0);
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 #switchContainer {
