--- a/src/Components/Sider/sider.css
+++ b/src/Components/Sider/sider.css
@@ -1,3 +1,15 @@
+@keyframes onAppearTer {
+  0% {
+    bottom: -100%;
+  }
+  50% {
+    bottom: 20px;
+  }
+  100% {
+    bottom: 0px;
+  }
+}
+
 #siderContainer {
   background-color: white;
   width: 90%;
@@ -12,6 +24,8 @@
   transform: translate(-50%, 0);
   display: flex;
   font-size: 16px;
+  animation-name: onAppearTer;
+  animation-duration: 1s;
 }
 
 .parameter {
