--- a/src/Components/Synth/synth.css
+++ b/src/Components/Synth/synth.css
@@ -1,3 +1,15 @@
+@keyframes onAppear {
+  0% {
+    right: -100%;
+  }
+  50% {
+    right: 20px;
+  }
+  100% {
+    right: 0px;
+  }
+}
+
 #SynthBar {
   background-color: white;
   height: 450px;
@@ -16,6 +28,8 @@
   justify-content: space-around;
   align-items: center;
   font-size: 16px;
+  animation-name: onAppear;
+  animation-duration: 1s;
 }
 
 #SynthBar .parameter {
