--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,14 @@
   height: 100%;
 }
 
+#mouseFollower {
+  position: absolute;
+  background-color: /* #aacfcf; */ red;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+}
+
 #homeScreen {
   height: 100vh;
   width: 100%;
@@ -96,6 +104,9 @@ header {
   top: 100px;
   margin-top: 100px;
   margin-bottom: 100px;
+  -webkit-text-shadow: 3px 5px rgba(255, 182, 182, 1);
+  -moz-text-shadow: 3px 3px rgba(255, 182, 182, 1);
+  text-shadow: 5px 5px rgba(255, 182, 182, 1);
 }
 
 #switchContainer {
