--- a/src/colors.css
+++ b/src/colors.css
@@ -118,3 +118,23 @@
 }
 
 /* Border Colors */
+
+.icon {
+  cursor: pointer;
+}
+
+#selectedItem {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #679b9b;
+  z-index: -1;
+}
+
+.i {
+  background-size: 20px 30px;
+}
