--- a/src/Components/Board/board.css
+++ b/src/Components/Board/board.css
@@ -3,19 +3,27 @@
   /*   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.74); */
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #boardContainer {
   position: relative;
+  color: #679b9b;
 }
 
 #paramHeader {
-  position: absolute;
-  top: 100px;
+  height: 100px;
+  width: 100%;
   display: flex;
-  width: 90%;
   justify-content: space-between;
+  color: #679b9b;
+  background-color: #fde2e2;
+  -webkit-text-shadow: 3px 5px #aacfcf;
+  -moz-text-shadow: 3px 3px #aacfcf;
+  text-shadow: 5px 5px #aacfcf;
 }
 
 #paramHeader div {
@@ -25,6 +33,7 @@
 .playStopContainer {
   width: 200px;
   justify-content: space-between;
+  margin-left: 100px;
 }
 
 .playStopContainer h2 {
@@ -49,7 +58,7 @@
 .cellShadow {
   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
-  box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.2);
+  box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.1);
 }
 
 .circle {
@@ -109,17 +118,17 @@
   margin: auto;
   margin-top: 10px;
   border-radius: 5px 5px 0 0;
-  -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
+  /*   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
-  box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.74);
+  box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.74); */
   animation-name: onAppearBis;
   animation-duration: 1s;
 }
 
 .optionButton {
-  -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
+  /*   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
-  box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.74);
+  box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.74); */
   font-size: 20px;
   padding: 5px;
   width: 90%;
@@ -151,7 +160,7 @@
   margin: auto;
 }
 
-@keyframes onActive {
+@keyframes onActiveBis {
   0% {
     width: 0%;
     height: 0%;
