--- a/src/Components/Board/board.css
+++ b/src/Components/Board/board.css
@@ -4,7 +4,7 @@
   -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.74); */
   position: absolute;
-  top: 50%;
+  top: calc(50% + 100px);
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -12,32 +12,76 @@
 #boardContainer {
   position: relative;
   color: #679b9b;
+  background-color: #aacfcf;
+  height: calc(100vh + 300px);
 }
 
 #paramHeader {
-  height: 100px;
+  height: 300px;
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   color: #679b9b;
-  background-color: #fde2e2;
+  /*   background-color: #fde2e2; */
+  background-color: #fff0f0;
   -webkit-text-shadow: 3px 5px #aacfcf;
   -moz-text-shadow: 3px 3px #aacfcf;
   text-shadow: 5px 5px #aacfcf;
+  position: relative;
 }
 
 #paramHeader div {
   font-size: 18px;
 }
 
-.playStopContainer {
-  width: 200px;
+#paramHeader h2 {
+  font-size: 32px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 15px 30px;
+  color: white;
+  border-radius: 30px;
+  background-color: #aacfcf;
+  /*   color: #fde2e2; */
+  -webkit-text-shadow: 3px 5px rgba(255, 182, 182, 1);
+  -moz-text-shadow: 3px 3px rgba(255, 182, 182, 1);
+  text-shadow: 5px 5px rgba(255, 182, 182, 1);
+}
+
+.playIcon {
+  font-size: 32px;
+}
+
+/* .playStopContainer {
+  position: sticky;
+  top: 40px;
+  width: 100px;
   justify-content: space-between;
   margin-left: 100px;
 }
 
-.playStopContainer h2 {
-  font-size: 24px;
+.menuBar {
+  position: sticky;
+  top: 40px;
+  width: 200px;
+  right: 100px;
+} */
+
+.playStopContainer {
+  position: absolute;
+  top: 100px;
+  width: 100px;
+  justify-content: space-between;
+  margin-left: 100px;
+}
+
+.menuBar {
+  position: absolute;
+  width: 200px;
+  right: 100px;
 }
 
 .square {
@@ -55,10 +99,21 @@
   transform: translateY(1px);
 }
 
+.solid {
+  border: solid 1px;
+  height: 14px;
+  width: 14px;
+}
+
+.squareBis {
+}
+
 .cellShadow {
   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.1);
+  height: 14px;
+  width: 14px;
 }
 
 .circle {
