--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   position: relative;
   width: 100%;
   height: 100%;
+  user-select: none; /* standard syntax */
+  -webkit-user-select: none; /* webkit (safari, chrome) browsers */
+  -moz-user-select: none; /* mozilla browsers */
+  -khtml-user-select: none; /* webkit (konqueror) browsers */
+  -ms-user-select: none; /* IE10+ */
 }
 
 #mouseFollower {
@@ -57,9 +62,12 @@
 
 #underConstruct {
   position: absolute;
-  top: 50%;
+  bottom: 0;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
+  height: 20%;
+  width: 100%;
+  background-color: #fde2e2;
 }
 
 .para1 {
@@ -86,7 +94,7 @@
   background-color: #aacfcf;
   font-size: 24px;
   position: relative;
-  color: #fde2e2;
+  color: #fff0f0;
   -webkit-text-shadow: 3px 5px rgba(255, 182, 182, 1);
   -moz-text-shadow: 3px 3px rgba(255, 182, 182, 1);
   text-shadow: 5px 5px rgba(255, 182, 182, 1);
@@ -96,7 +104,7 @@
   font-size: 40px;
   font-weight: lighter;
   position: absolute;
-  top: 25%;
+  top: 100px;
   left: 50%;
   transform: translate(-50%, -50%);
 }
