tuto footer color

--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@
   transform: translate(-50%, 0);
   height: 20%;
   width: 100%;
-  background-color: #fde2e2;
+  background-color: #fff0f0;
 }
 
 .para1 {
