--- a/src/Components/Board/board.css
+++ b/src/Components/Board/board.css
@@ -73,7 +73,7 @@
 
 .playStopContainer {
   position: absolute;
-  width: 100px;
+  width: 150px;
   justify-content: space-between;
   margin-left: 100px;
 }
@@ -165,13 +165,13 @@
   width: 200px;
   min-height: 250px;
   position: absolute;
-  top: 50%;
-  left: 0px;
-  transform: translate(0, -50%);
+  bottom: 50px;
+  left: 100px;
   padding: 10px 15px;
   margin: auto;
   margin-top: 10px;
   border-radius: 5px 5px 0 0;
+  background-color: lime;
   /*   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
   box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.74); */
