--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,63 @@
   border-radius: 50%;
 }
 
+@keyframes onScrollerAppear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.appeared {
+  animation-name: onScrollerAppear;
+  animation-duration: 1.5s;
+}
+
+@keyframes WhiteDisappeared {
+  0% {
+    opacity: 1;
+    background-color: white;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.whiteDisappeared {
+  animation-name: WhiteDisappeared;
+  animation-duration: 1.5s;
+}
+
+@keyframes greenDisappeared {
+  0% {
+    opacity: 1;
+    color: #679b9b;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.greenDisappeared {
+  animation-name: greenDisappeared;
+  animation-duration: 1.5s;
+}
+
+#scroller {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  height: 50px;
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  z-index: 99;
+}
+
 #homeScreen {
   height: 100vh;
   width: 100%;
@@ -95,9 +152,6 @@
   font-size: 24px;
   position: relative;
   color: #fff0f0;
-  -webkit-text-shadow: 3px 5px rgba(255, 182, 182, 1);
-  -moz-text-shadow: 3px 3px rgba(255, 182, 182, 1);
-  text-shadow: 5px 5px rgba(255, 182, 182, 1);
 }
 
 #screen3 h2 {
@@ -107,6 +161,9 @@
   top: 100px;
   left: 50%;
   transform: translate(-50%, -50%);
+  -webkit-text-shadow: 3px 5px rgba(255, 182, 182, 1);
+  -moz-text-shadow: 3px 3px rgba(255, 182, 182, 1);
+  text-shadow: 5px 5px rgba(255, 182, 182, 1);
 }
 
 h3 {
