--- a/src/Components/Board/board.css
+++ b/src/Components/Board/board.css
@@ -149,6 +149,13 @@
   align-content: space-between;
 }
 
+#gridDimensionner {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 200px;
+}
+
 @keyframes onAppearBis {
   0% {
     left: -100%;
@@ -162,19 +169,19 @@
 }
 
 #optionsBar {
-  width: 200px;
-  min-height: 250px;
-  position: absolute;
-  bottom: 50px;
-  left: 100px;
+  height: 450px;
+  width: 100px;
   padding: 10px 15px;
-  margin: auto;
-  margin-top: 10px;
-  border-radius: 5px 5px 0 0;
-
-  /*   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
-  -moz-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.74);
-  box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.74); */
+  border-radius: 5px 0 0 5px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translate(0, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 16px;
   animation-name: onAppearBis;
   animation-duration: 1s;
 }
@@ -186,7 +193,6 @@
   font-size: 20px;
   padding: 5px;
   width: 90%;
-  margin: auto;
   margin-bottom: 5px;
 }
 
